--- a/app/src/main/res/values/app_config.xml
+++ b/app/src/main/res/values/app_config.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Crypto Key  -->
-    <string name="crypt_key"></string>
+    <!-- API Key  -->
+    <string name="api_key">928e74d2b60548c08e262214191804</string>
 
     <string name="app_name">WeatherCast</string>
     <!--Set Your Application version -->
