--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -1,60 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/_50"
-        android:layout_marginBottom="@dimen/_50"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+
+        <include layout="@layout/content_error"
+            android:id="@+id/error"
+            android:visibility="gone"
+            />
 
         <LinearLayout
+            android:id="@+id/llMainPage"
+            android:visibility="visible"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-
-            <TextView
-                android:id="@+id/tvUserName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top|center"
-                android:layout_marginTop="@dimen/_10"
-                android:text="20" />
-
-            <TextView
-                android:id="@+id/tvEditProfile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top|center"
-                android:onClick="tvEditProfileClick"
-                android:background="?selectableItemBackground"
-                android:layout_marginTop="@dimen/_10"
-                android:text="Bangalore" />
-
-            <View
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/_10"
-                android:layout_marginRight="@dimen/_10"
-                android:layout_marginTop="@dimen/_10"
-                android:background="@color/dividerColor" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/header_bg"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tvCTemp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="top|center"
+                        android:layout_marginTop="56dp"
+                        android:fontFamily="sans-serif-black"
+                        android:text="20"
+                        android:textColor="@color/first_heading"
+                        android:textSize="96sp" />
+
+                    <TextView
+                        android:id="@+id/tvPlace"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="top|center"
+                        android:layout_marginBottom="62dp"
+                        android:fontFamily="sans-serif-thin"
+                        android:text="Bangalore"
+                        android:textSize="36sp" />
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/gradient_bg_bottom_to_top"
+                android:orientation="vertical">
+
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rvForecastList"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvForecastList"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="@dimen/_20" />
+            android:layout_height="@dimen/_30"
+            android:layout_gravity="bottom"
+            android:background="@color/white"
+            android:gravity="left|center">
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_30"
+                android:layout_gravity="left|center"
+                android:layout_marginTop="@dimen/_04"
+                android:layout_marginLeft="16dp"
+                android:hint="Write a Comment" />
+
+        </LinearLayout>
+
+    </FrameLayout>
 
 
 </LinearLayout>
